--- a/manager/templates/account/apps.html
+++ b/manager/templates/account/apps.html
@@ -1,10 +1,16 @@
 {% extends "account/layout.html" %}
 
 {% block subcontent %}
+<div style="text-align:right">
+    <a href="{% url 'manager.views.account_apps_edit' account.name %}" class="btn btn-default btn" role="button">Add app</a>
+</div>
+<br />
 <table class="table table-hover">
     <thead>
     <tr>
         <th>Name</th>
+        <th></th>
+        <th>Status</th>
         <th>Image</th>
         <th>Memory</th>
         <th></th>
@@ -16,11 +22,14 @@
     {% for app in apps %}
         <tr>
             <td><a href="{% url 'manager.views.account_apps_edit' account.name app.id %}">{{app.name}}</a></td>
+            <td>{% if app.up %}<span class="glyphicon glyphicon-ok-sign" style="color:green"></span>{% else %}
+            <span class="glyphicon glyphicon-minus-sign" style="color:red"></span>{% endif %}</td>
+            <td>{{app.status}}</td>
             <td>{{app.image.name}}</td>
             <td>{{app.memory}} M</td>
-            <td><a href="/actions/container/{{app.id}}/start">start</a></td>
-            <td><a href="/actions/container/{{app.id}}/stop">stop</a></td>
-            <td><a href="/actions/container/{{app.id}}/redeploy">redeploy</a></td>
+            <td><a href="/actions/container/{{app.id}}/start" title="Start"><span class="glyphicon glyphicon-play"></span></a></td>
+            <td><a href="/actions/container/{{app.id}}/stop" title="Stop"><span class="glyphicon glyphicon-stop"></span></a></a></td>
+            <td><a href="/actions/container/{{app.id}}/redeploy" title="Redeploy"><span class="glyphicon glyphicon-repeat"></span></a></a></td>
         </tr>
     {% endfor %}
     </tbody>
