--- a/manager/templates/account/layout.html
+++ b/manager/templates/account/layout.html
@@ -1,15 +1,19 @@
 {% extends "layout.html" %}
 
 {% block content %}
+{% url 'manager.views.account' account.name as ourl %}
+{% url 'manager.views.account_apps' account.name as aurl %}
+{% url 'manager.views.account_domains' account.name as durl %}
+{% url 'manager.views.account_databases' account.name as dburl %}
 
          <div class="row row-offcanvas row-offcanvas-right">
 
             <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
           <div class="list-group">
-            <a href="{% url 'manager.views.account' account.name %}" class="list-group-item active">Overview</a>
-            <a href="{% url 'manager.views.account_apps' account.name %}" class="list-group-item">Apps</a>
-            <a href="{% url 'manager.views.account_domains' account.name %}" class="list-group-item">Domains</a>
-            <a href="{% url 'manager.views.account_databases' account.name %}" class="list-group-item">Databases</a>
+            <a href="{% url 'manager.views.account' account.name %}" class="list-group-item{% if ourl == request.path %} active{% endif %}">Overview</a>
+            <a href="{% url 'manager.views.account_apps' account.name %}" class="list-group-item{% if aurl in request.path %} active{% endif %}">Apps</a>
+            <a href="{% url 'manager.views.account_domains' account.name %}" class="list-group-item{% if durl in request.path %} active{% endif %}">Domains</a>
+            <a href="{% url 'manager.views.account_databases' account.name %}" class="list-group-item{% if dburl in request.path %} active{% endif %}">Databases</a>
           </div>
         </div><!--/.sidebar-offcanvas-->
 
