--- a/manager/templates/account/databases.html
+++ b/manager/templates/account/databases.html
@@ -2,7 +2,7 @@
 
 {% block subcontent %}
 <div style="text-align:right">
-    <a href="{% url 'manager.views.account_domains_edit' account.name %}" class="btn btn-default btn" role="button">Add database</a>
+    <a href="{% url 'manager.views.account_databases_edit' account.name %}" class="btn btn-default btn" role="button">Add database</a>
 </div>
 <br />
 <table class="table table-hover">
