--- a/manager/templates/layout.html
+++ b/manager/templates/layout.html
@@ -65,6 +65,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/js/handlebars-v2.0.0.js"></script>
+
   {% block javascript %}
   {% endblock %}
   </body>
