--- a/manager/templates/account/apps_action.html
+++ b/manager/templates/account/apps_action.html
@@ -1,6 +1,6 @@
-{% extends "layout.html" %}
+{% extends "account/layout.html" %}
 {% load bootstrap %}
-{% block content %}
+{% block subcontent %}
 
 {% include "includes/action.html" %}
 
