--- a/manager/templates/containers.html
+++ b/manager/templates/containers.html
@@ -1,38 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h2>Containers</h2>
-<br />
-<table class="table table-hover">
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Account</th>
-        <th></th>
-        <th>Status</th>
-        <th>Image</th>
-        <th>Memory</th>
-        <th></th>
-        <th></th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for app in apps %}
-        <tr>
-            <td><a href="{% url 'manager.views.account_apps_edit' app.account.name app.id %}">{{app.name}}</a></td>
-            <td><a href="{% url 'manager.views.account' app.account.name %}">{{app.account.name}}</a></td>
-            <td>{% if app.up %}<span class="glyphicon glyphicon-ok-sign" style="color:green"></span>{% else %}
-            <span class="glyphicon glyphicon-minus-sign" style="color:red"></span>{% endif %}</td>
-            <td>{{app.status}}</td>
-            <td>{{app.image.name}}</td>
-            <td>{{app.memory}} M</td>
-            <td><a href="/actions/container/{{app.id}}/start">start</a></td>
-            <td><a href="/actions/container/{{app.id}}/stop">stop</a></td>
-            <td><a href="/actions/container/{{app.id}}/redeploy">redeploy</a></td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+
+{% include "includes/apps_list.html" %}
 
 {% endblock %}
