--- a/manager/templates/layout.html
+++ b/manager/templates/layout.html
@@ -46,9 +46,13 @@
           </ul>
 
             <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{request.user}} <span class="caret"></span></a>
+                <ul class="dropdown-menu" role="menu">
+                <li><a href="{% url 'manager.views.profile_sshkeys' %}">SSH keys</a></li>
+                </ul>
+            </li>
 
-
-                        <li><a href="#">{{request.user}}</a></li>
 <li><a href="{% url 'auth_logout' %}">Logout</a></li>
 
                     </ul>
