image variables & image configs added

--- a/manager/templates/account/apps_edit.html
+++ b/manager/templates/account/apps_edit.html
@@ -5,7 +5,55 @@
     {%csrf_token%}
     {{ formset|bootstrap }}
 
+    <div class="variables">
+    </div>
+
     <button type="submit" class="btn btn-default">Save</button>
 </form>
         
+{% endblock %}
+
+{% block javascript %}
+<script id="variableForm" type="text/x-handlebars-template">
+	{% verbatim %}
+	<div class="form-group">
+            <label class="control-label  " for="id_variable_{{id}}">{{name}} ({{description}})</label>
+        <div class=" ">
+        	{{#if create_file}}
+				<textarea class=" form-control" cols="40" id="id_variable_{{id}}" name="id_variable_{{id}}" rows="10"></textarea>
+        	{{else}}
+        		<input class=" form-control" id="id_variable_{{id}}" name="id_variable_{{id}}" placeholder="{{default}}" type="text" value="" /> 
+        	{{/if}}
+        </div>
+	</div>
+	{% endverbatim %}
+</script>
+<script type="text/javascript">
+	var source   = $("#variableForm").html();
+    var variableTemplate = Handlebars.compile(source);
+
+	var get_image_variables = function() {
+		$('#id_image').find('option:selected').each(function() {
+			var id = $(this).attr('value');
+
+			if (id) {
+				$.get('/api/v1.0/images/'+id, function(data) {
+					if (data.variables) {
+						$('.variables').html('<br /><h4>Image variables</h4>');
+
+						for (var v in data.variables) {
+							var variable = data.variables[v];
+
+	       					$('.variables').append(variableTemplate(variable));
+	       				}
+	       			}
+				})
+			}
+		});
+	}
+	$('#id_image').change(function() {
+		get_image_variables();
+	})
+	get_image_variables();
+</script>
 {% endblock %}
