--- a/manager/static/css/style.css
+++ b/manager/static/css/style.css
@@ -7,10 +7,32 @@ body {
   overflow-x: hidden; /* Prevent scroll on narrow devices */
 }
 body {
-  padding-top: 70px;
+  padding-top: 50px;
 }
 footer {
   padding: 30px 0;
+}
+
+body > .container {
+  margin-top:30px;
+}
+
+.account-menu {
+  padding:0px 0px 10px 0px;
+}
+
+.account-menu h1 {
+  font-size: 30px;
+  float:left;
+  font-weight: normal;
+  margin-right:15px;
+}
+
+.account-menu > div {
+}
+
+.account-menu > div > div {
+  margin-top:32px;
 }
 
 /*
