--- a/manager/templates/layout.html
+++ b/manager/templates/layout.html
@@ -16,7 +16,7 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-fixed-top navbar-inverse">
+    <nav class="navbar navbar-fixed-top navbar-inverse main-navbar">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -29,7 +29,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Home</a></li>
+            <li class="active"><a href="/">Accounts</a></li>
             <li class=""><a href="{% url 'manager.views.containers' %}">Containers</a></li>
             <li class="dropdown">
                 <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sync <span class="caret"></span></a>
@@ -60,6 +60,7 @@
       </div><!-- /.container -->
     </nav><!-- /.navbar -->
 
+{% block container %}
     <div class="container">
 
      {% block content %}
@@ -71,7 +72,7 @@
       </footer>
 
     </div><!--/.container-->
-
+{% endblock %}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -79,6 +80,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/js/handlebars-v2.0.0.js"></script>
+    <script src="/static/js/reconnecting-websocket.min.js"></script>
+    <script src="/static/js/javascript.js"></script>
 
   {% block javascript %}
   {% endblock %}
