--- a/manager/templates/layout.html
+++ b/manager/templates/layout.html
@@ -62,7 +62,7 @@
 
 {% block container %}
     <div class="container">
-
+    
      {% block content %}
      {% endblock %}
 
@@ -81,8 +81,8 @@
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/js/handlebars-v2.0.0.js"></script>
     <script src="/static/js/reconnecting-websocket.min.js"></script>
+    <script src="/static/js/term.js"></script>
     <script src="/static/js/javascript.js"></script>
-
   {% block javascript %}
   {% endblock %}
   </body>
