--- a/manager/static/templates/account/layout.html
+++ b/manager/static/templates/account/layout.html
@@ -1,8 +1,8 @@
 <div class="jumbotron account-menu">
     <div class="container">
-        <h1>drupal</h1>
+        <h1>{{account.name}}</h1>
         <div>
-            <div>Drupal sistemi</div>
+            <div>{{account.description}}</div>
         </div>
     </div>
 </div>
@@ -12,10 +12,11 @@
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
             <div class="list-group">
-                <a href="/a/{{ account.name }}/" class="list-group-item" ng-class="{active: action=='overview'}">Overview</a>
-                <a href="/a/{{ account.name }}/apps" class="list-group-item" ng-class="{active: action=='apps'}">Apps</a>
-                <a href="/a/{{ account.name }}/domains" class="list-group-item" ng-class="{active: action=='domains'}">Domains</a>
-                <a href="/a/{{ account.name }}/databases" class="list-group-item" ng-class="{active: action=='databases'}">Databases</a>
+                <a href="/a/{{ account.name }}" class="list-group-item" ng-class="{active: action=='overview'}" force-reload>Overview</a>
+                <a href="/a/{{ account.name }}/apps" class="list-group-item" ng-class="{active: action=='apps'}" force-reload>Apps</a>
+                <a href="/a/{{ account.name }}/domains" class="list-group-item" ng-class="{active: action=='domains'}" force-reload>Domains</a>
+                <a href="/a/{{ account.name }}/databases" class="list-group-item" ng-class="{active: action=='databases'}" force-reload>Databases</a>
+                <a href="/a/{{ account.name }}/cronjobs" class="list-group-item" ng-class="{active: action=='cronjobs'}" force-reload>Cronjobs</a>
             </div>
         </div>
         <!--/.sidebar-offcanvas-->
