--- a/manager/templates/layout.html
+++ b/manager/templates/layout.html
@@ -15,51 +15,7 @@
     <link href="/static/css/style.css" rel="stylesheet">
   </head>
 
-  <body>
-    <nav class="navbar navbar-fixed-top navbar-inverse main-navbar">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Manager: {{server_friendly_name}}</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="/">Accounts</a></li>
-            <li class=""><a href="{% url 'manager.views.containers' %}">Containers</a></li>
-            <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Sync <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                <li><a href="{% url 'manager.views.sync_users' %}">Sync users</a></li>
-                <li><a href="{% url 'manager.views.sync_databases' %}">Sync databases</a></li>
-                <li><a href="{% url 'manager.views.update_nginx_config' %}">Update nginx/apache config</a></li>
-                <li class="divider"></li>
-               <li><a href="{% url 'manager.views.rebuild_base_image' %}">Rebuild base Docker images</a></li>
-                </ul>
-            </li>
-            <li><a href="{% url 'admin:index' %}">Django Admin</a></li>
-
-          </ul>
-
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">{{request.user}} <span class="caret"></span></a>
-                <ul class="dropdown-menu" role="menu">
-                <li><a href="{% url 'manager.views.profile_sshkeys' %}">SSH keys</a></li>
-                </ul>
-            </li>
-
-<li><a href="{% url 'auth_logout' %}">Logout</a></li>
-
-                    </ul>
-        </div><!-- /.nav-collapse -->
-      </div><!-- /.container -->
-    </nav><!-- /.navbar -->
-
+  
 {% block container %}
     <div class="container">
     
@@ -79,11 +35,16 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery-2.1.3.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/handlebars-v2.0.0.js"></script>
     <script src="/static/js/reconnecting-websocket.min.js"></script>
     <script src="/static/js/term.js"></script>
-    <script src="/static/js/javascript.js"></script>
+    <script>function getWebsocketHost() {
+  if (location.protocol == 'https:') {
+    return 'wss://'+location.host;
+  }else{
+    return 'ws://'+location.host;
+  }
+}</script>
   {% block javascript %}
   {% endblock %}
   </body>
