--- a/manager/static/templates/nav.html
+++ b/manager/static/templates/nav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Manager: {{profile.config.server_name}}</a>
+          <a class="navbar-brand" href="/">Manager: {{profile.server_name}}</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
