manager apps angular (partial)

--- a/manager/static/templates/includes/apps_list.html
+++ b/manager/static/templates/includes/apps_list.html
@@ -27,7 +27,7 @@
             <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/logs" title="Show logs"><span class="glyphicon glyphicon glyphicon-list"></span></a></td>
             <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/start" title="Start"><span class="glyphicon glyphicon-play"></span></a></td>
             <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/stop" title="Stop"><span class="glyphicon glyphicon-stop"></span></a></a></td>
-            <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/redeploy title="Redeploy"><span class="glyphicon glyphicon-repeat"></span></a></a></td>
+            <td><a href="/a/{{ app.account_name }}/apps/{{ app.id }}/redeploy" title="Redeploy"><span class="glyphicon glyphicon-repeat"></span></a></a></td>
         </tr>
     </tbody>
 </table>
