--- a/manager/static/templates/nav.html
+++ b/manager/static/templates/nav.html
@@ -23,7 +23,7 @@
                <li><a href="/sync/images/">Rebuild base Docker images</a></li>
                 </ul>
             </li>
-            <li><a href="/admin/">Django Admin</a></li>
+            <li><a href="" ng-click="djangoAdmin()">Django Admin</a></li>
 
           </ul>
 
