--- a/manager/static/templates/account/layout.html
+++ b/manager/static/templates/account/layout.html
@@ -24,9 +24,8 @@
         <div class="col-xs-12 col-sm-9">
 
 
-            <yield content_for="content">
-
-            <hr>
+             <div data-block="content">
+            </div>
 
             <footer>
             </footer>
