--- a/manager/static/templates/nav.html
+++ b/manager/static/templates/nav.html
@@ -23,6 +23,7 @@
                <li><a href="/sync/images/">Rebuild base Docker images</a></li>
                 </ul>
             </li>
+            <li><a href="/users/">Users</a></li>
             <li><a href="" ng-click="djangoAdmin()">Django Admin</a></li>
 
           </ul>
