--- a/proxy/templates/index.tmpl
+++ b/proxy/templates/index.tmpl
@@ -26,7 +26,7 @@
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
     <script src="/static/js/angular.min.js"></script>
     <script src="/static/js/angular-route.min.js"></script>
-    <script src="/static/js/ng-layout.js"></script>
+    <script src="/static/js/angular-blocks.min.js"></script>
     <script src="/static/js/handlebars-v2.0.0.js"></script>
     <script src="/static/js/jquery.iframe-auto-height.modified.js"></script>
     <script src="/static/js/jquery.browser.js"></script>
