--- a/manager/static/templates/account/apps.html
+++ b/manager/static/templates/account/apps.html
@@ -1,5 +1,5 @@
-<ng-layout src="static/templates/account/layout.html">
-    <div content_for="content">
+<div data-extend-template="/static/templates/account/layout.html">
+   <div data-block="content">
 		<div style="text-align:right">
 			<a href="/a/{{account.name}}/apps/add" class="btn btn-default btn" role="button">Add app</a>
 		</div>
