--- a/manager/static/templates/account/apps_logs.html
+++ b/manager/static/templates/account/apps_logs.html
@@ -1,5 +1,5 @@
-<ng-layout src="static/templates/account/layout.html">
-<div content_for="content">
+<div data-extend-template="/static/templates/account/layout.html">
+   <div data-block="content">
 	<div style="width:100%;text-align:center">
 	    <h3>Displaying logs for {{app.name}} app for {{account.name}}</h3>
 
