--- a/manager/static/templates/account/cronjobs.html
+++ b/manager/static/templates/account/cronjobs.html
@@ -1,5 +1,5 @@
-<ng-layout src="static/templates/account/layout.html">
-    <div content_for="content">
+<div data-extend-template="/static/templates/account/layout.html">
+   <div data-block="content">
 		<div style="text-align:right">
 			<a href="/a/{{account.name}}/cronjobs/add" class="btn btn-default btn" role="button">Add cronjob</a>
 		</div>
@@ -34,4 +34,4 @@
 			</tbody>
 		</table>
     </div>
-</ng-layout>
+</div>
