--- a/manager/static/templates/account/frame.html
+++ b/manager/static/templates/account/frame.html
@@ -1,5 +1,5 @@
-<ng-layout src="static/templates/account/layout.html">
-  <div content_for="content">
+<div data-extend-template="/static/templates/account/layout.html">
+   <div data-block="content">
     <iframe auto-resizing-iframe ng-src="{{ suburl }}" style="width:100%;visibility:hidden" class="auto-height" scrolling="no" frameborder="0"></iframe>
   </div>
-</ng-layout>
+</div>
