--- a/manager/static/templates/account/overview.html
+++ b/manager/static/templates/account/overview.html
@@ -1,5 +1,5 @@
-<ng-layout src="static/templates/account/layout.html">
-    <div content_for="content">
+<div data-extend-template="/static/templates/account/layout.html">
+   <div data-block="content">
         <h3 style="margin-top:0px">Interactive shell</h3>
 
         <form class="form-inline" ng-submit="submit()">
@@ -16,4 +16,4 @@
         </div>
 
     </div>
-</ng-layout>
+</div>
