domains golang API + angular

--- a/manager/static/templates/account/layout.html
+++ b/manager/static/templates/account/layout.html
@@ -13,10 +13,10 @@
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar">
             <div class="list-group">
                 <a href="/a/{{ account.name }}" class="list-group-item" ng-class="{active: action=='overview'}" force-reload>Overview</a>
-                <a href="/a/{{ account.name }}/apps" class="list-group-item" ng-class="{active: action=='apps'}" force-reload>Apps</a>
-                <a href="/a/{{ account.name }}/domains" class="list-group-item" ng-class="{active: action=='domains'}" force-reload>Domains</a>
-                <a href="/a/{{ account.name }}/databases" class="list-group-item" ng-class="{active: action=='databases'}" force-reload>Databases</a>
-                <a href="/a/{{ account.name }}/cronjobs" class="list-group-item" ng-class="{active: action=='cronjobs'}" force-reload>Cronjobs</a>
+                <a href="/a/{{ account.name }}/apps" class="list-group-item" ng-show="account.access.app_access == true" ng-class="{active: action=='apps'}" force-reload>Apps</a>
+                <a href="/a/{{ account.name }}/domains" class="list-group-item" ng-show="account.access.domain_access == true" ng-class="{active: action=='domains'}" force-reload>Domains</a>
+                <a href="/a/{{ account.name }}/databases" class="list-group-item" ng-show="account.access.database_access == true" ng-class="{active: action=='databases'}" force-reload>Databases</a>
+                <a href="/a/{{ account.name }}/cronjobs" class="list-group-item" ng-show="account.access.cronjob_access == true" ng-class="{active: action=='cronjobs'}" force-reload>Cronjobs</a>
             </div>
         </div>
         <!--/.sidebar-offcanvas-->
