--- a/proxy/templates/index.tmpl
+++ b/proxy/templates/index.tmpl
@@ -10,17 +10,12 @@
 
     <title>Manager</title>
 
-    <!-- Bootstrap core CSS -->
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
   </head>
 
   <body ng-controller="mainCtrl">
-  <ng-include src="'/static/templates/nav.html'"></ng-include>
-    
-
-
-
+    <ng-include src="'/static/templates/nav.html'"></ng-include>
     <div id="mainView" ng-view></div>
     <script src="/static/js/jquery-2.1.3.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
@@ -32,10 +27,164 @@
     <script src="/static/js/jquery.browser.js"></script>
     <script src="/static/js/reconnecting-websocket.min.js"></script>
     <script src="/static/js/term.js"></script>
+    <script src="/static/ace/ace.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/static/js/ui-ace.js"></script>
+    <script src="/static/js/ui-bootstrap-0.13.2.min.js"></script>
+    <script src="/static/js/ui-bootstrap-tpls-0.13.1.min.js"></script>
+    
     <script src="/static/js/javascript.js"></script>
     <script src="/static/js/app.js"></script>
     <script src="/static/js/controllers.js"></script>
     <script src="/static/js/services.js"></script>
     <script src="/static/js/directives.js"></script>
-  </body>
+
+<script id="nginx1" type="text/x-handlebars-template">index index.php index.html index.htm;
+
+root /home/ACCOUNT/domains/DOMAIN/www;
+
+location / {
+    try_files $uri $uri/ /index.php ;
+}
+
+location = /favicon.ico { log_not_found off; access_log off; }
+location = /robots.txt  { log_not_found off; access_log off; }
+
+location ~ \.php$ {
+    fastcgi_pass #php56_9000_ip#:9000;
+    fastcgi_index index.php;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    include fastcgi_params;
+}
+</script>
+<script id="nginx2" type="text/x-handlebars-template"># Enable compression, this will help if you have for instance advagg module
+# by serving Gzip versions of the files.
+gzip_static on;
+
+index index.php index.html index.htm;
+
+root /home/ACCOUNT/domains/DOMAIN/www;
+
+location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+}
+
+location = /robots.txt {
+        alias /etc/nginx/robots.txt;
+        allow all;
+        log_not_found off;
+        access_log off;
+}
+
+# This matters if you use drush prior to 5.x
+# After 5.x backups are stored outside the Drupal install.
+#location = /backup {
+#        deny all;
+#}
+
+# Very rarely should these ever be accessed outside of your lan
+location ~* \.(txt|log)$ {
+#                deny all;
+}
+
+location ~ \..*/.*\.php$ {
+        return 403;
+}
+
+# No no for private
+location ~ ^/sites/.*/private/ {
+        return 403;
+}
+
+# Block access to "hidden" files and directories whose names begin with a
+# period. This includes directories used by version control systems such
+# as Subversion or Git to store control files.
+location ~ (^|/)\. {
+        return 403;
+}
+
+location / {
+        # This is cool because no php is touched for static content
+        try_files $uri @rewrite;
+}
+
+location @rewrite {
+        # You have 2 options here
+        # For D7 and above:
+        # Clean URLs are handled in drupal_environment_initialize().
+        rewrite ^ /index.php;
+        # For Drupal 6 and bwlow:
+        # Some modules enforce no slash (/) at the end of the URL
+        # Else this rewrite block wouldn't be needed (GlobalRedirect)
+        #rewrite ^/(.*)$ /index.php?q=$1;
+}
+
+location ~ \.php$ {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        #NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+        include fastcgi_params;
+fastcgi_param SCRIPT_FILENAME $request_filename;
+        fastcgi_intercept_errors on;
+        fastcgi_pass #php56_9000_ip#:9000;
+fastcgi_read_timeout 2000;
+}
+
+# Fighting with Styles? This little gem is amazing.
+# This is for D6
+#location ~ ^/sites/.*/files/imagecache/ {
+# This is for D7 and D8
+location ~ ^/sites/.*/files/styles/ {
+        try_files $uri @rewrite;
+}
+
+location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires max;
+        log_not_found off;
+}
+</script>
+<script id="nginx3" type="text/x-handlebars-template">location / {
+    proxy_pass  http://IP;
+    proxy_http_version 1.1;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Request-Start $msec;
+}</script>
+<script id="nginx4" type="text/x-handlebars-template">location / {
+    proxy_pass  http://#apache#;
+    proxy_http_version 1.1;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Request-Start $msec;
+}</script>
+<script id="nginx5" type="text/x-handlebars-template">location / {
+    proxy_pass  http://IP;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+    proxy_set_header Host $http_host;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header X-Forwarded-Port $server_port;
+    proxy_set_header X-Request-Start $msec;
+}</script>
+<script id="nginx6" type="text/x-handlebars-template">location / {
+    include uwsgi_params;
+    uwsgi_pass #app_9000_ip#:9000;
+    uwsgi_intercept_errors on;
+}</script>
+<script id="apache1" type="text/x-handlebars-template">DocumentRoot /home/ACCOUNT/domains/DOMAIN/www
+
+<php>#php56_9000_ip#</php>
+
+<Directory /home/ACCOUNT/domains/DOMAIN/www>
+    Options Indexes FollowSymLinks MultiViews
+    AllowOverride All
+    Order allow,deny
+    allow from all
+</Directory></script>
+    </body>
 </html>
