--- a/proxy/templates/index.tmpl
+++ b/proxy/templates/index.tmpl
@@ -17,20 +17,23 @@
   <body ng-controller="mainCtrl">
     <ng-include src="'/static/templates/nav.html'"></ng-include>
     <div id="mainView" ng-view></div>
-    <script src="/static/js/jquery-2.1.3.min.js"></script>
+    <div id="tasks" ng-controller="tasksCtrl">
+        <ng-include src="'/static/templates/tasks.html'"></ng-include>
+    </div>
+    <script src="/static/vendor/jquery-2.1.3.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
-    <script src="/static/js/angular.min.js"></script>
-    <script src="/static/js/angular-route.min.js"></script>
-    <script src="/static/js/angular-blocks.min.js"></script>
-    <script src="/static/js/handlebars-v2.0.0.js"></script>
-    <script src="/static/js/jquery.iframe-auto-height.modified.js"></script>
-    <script src="/static/js/jquery.browser.js"></script>
-    <script src="/static/js/reconnecting-websocket.min.js"></script>
-    <script src="/static/js/term.js"></script>
+    <script src="/static/vendor/angular.min.js"></script>
+    <script src="/static/vendor/angular-route.min.js"></script>
+    <script src="/static/vendor/angular-blocks.min.js"></script>
+    <script src="/static/vendor/handlebars-v2.0.0.js"></script>
+    <script src="/static/vendor/jquery.iframe-auto-height.modified.js"></script>
+    <script src="/static/vendor/jquery.browser.js"></script>
+    <script src="/static/vendor/reconnecting-websocket.min.js"></script>
+    <script src="/static/vendor/term.js"></script>
     <script src="/static/ace/ace.js" type="text/javascript" charset="utf-8"></script>
-    <script src="/static/js/ui-ace.js"></script>
-    <script src="/static/js/ui-bootstrap-0.13.2.min.js"></script>
-    <script src="/static/js/ui-bootstrap-tpls-0.13.1.min.js"></script>
+    <script src="/static/vendor/ui-ace.js"></script>
+    <script src="/static/vendor/ui-bootstrap-0.13.2.min.js"></script>
+    <script src="/static/vendor/ui-bootstrap-tpls-0.13.1.min.js"></script>
     
     <script src="/static/js/javascript.js"></script>
     <script src="/static/js/app.js"></script>
