--- a/manager/static/templates/nav.html
+++ b/manager/static/templates/nav.html
@@ -20,7 +20,7 @@
                 <li><a href="/sync/databases/">Sync databases</a></li>
                 <li><a href="/sync/nginx-apache/">Update nginx/apache config</a></li>
                 <li class="divider"></li>
-               <li><a href="/sync/images/">Rebuild base Docker images</a></li>
+               <li><a href="/sync/images">Rebuild base Docker images</a></li>
                 </ul>
             </li>
             <li><a href="/users/">Users</a></li>
